# github-pulse

./: .gitignore  DESIGN.md  LEARNING.md  Makefile  NOTES.md  README.md  docker-compose.yml  github_events.csv  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
db/: schema.sql
ingestor/: config.py  firehose.py  ingestor.py  rollup.py  writer.py
loadtest/: bench_writer.py  generate_events.py  locustfile.py
tests/: test_firehose.py  test_generator.py  test_normalize.py  test_writer_integration.py
