[project]
name = "github-pulse"
version = "0.1.0"
description = "A write-heavy GitHub events analytics platform — a learning project for database scaling."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "locust>=2.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
